--- a/src/stylesheets/components/input.scss
+++ b/src/stylesheets/components/input.scss
@@ -6,7 +6,7 @@ textarea {
   color: $c-dark;
   border: none;
   border-radius: 0;
-  box-shadow: inset 0 -1px $c-bold;
+  box-shadow: inset 0 -1px $c-loud;
   box-sizing: border-box;
   display: block;
   font-size: $ty-base; // not relative
