feat(Color): Apply dark colors to link text on loud backgrounds by default to maintain WCAG2.0 AAA r

--- a/src/stylesheets/vars/color.scss
+++ b/src/stylesheets/vars/color.scss
@@ -37,9 +37,9 @@ $c-white: #fff; /* White */
   color: $c-dark;
 
   a {
-    color: $c-main-deep;
+    color: $c-main-dark;
 
-    &:visited { color: $c-extra-deep; }
+    &:visited { color: $c-extra-dark; }
   }
 }
 
