--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -6,6 +6,7 @@
 @import './components/recess';
 @import './components/tile';
 @import './components/table';
+@import './components/blockquote';
 @import './components/button';
 @import './components/input';
 
