--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -2,6 +2,7 @@
 @import './base/container';
 @import './base/aspects';
 @import './base/modifiers';
+@import './components/anchor';
 @import './components/list';
 @import './components/nav';
 @import './components/recess';
