fix: Fix broken @extend in list styles

--- a/src/stylesheets/components/list.scss
+++ b/src/stylesheets/components/list.scss
@@ -4,8 +4,9 @@
   list-style: none;
 }
 
-.bullet-point-list {
-  @extend .list;
+.bullet-point-list,
+.list.bullet-point-list {
+  @extend .tile;
 
   list-style: unset;
   list-style-position: inside;
