--- a/src/stylesheets/components/input.scss
+++ b/src/stylesheets/components/input.scss
@@ -2,18 +2,31 @@
 
 input,
 textarea {
-  appearance: none;
   color: $c-dark;
-  border: none;
   border-radius: 0;
   box-shadow: inset 0 -1px $c-loud;
   box-sizing: border-box;
-  display: block;
   font-size: $ty-base; // not relative
   font-weight: 500;
-  height: 2.4em;
-  padding: $sp-xs $sp-sm;
-  max-width: 100%;
+
+  &[type=text],
+  &[type=number],
+  &[type=color],
+  // &[type=checkbox],
+  // &[type=radio],
+  &[type=date],
+  &[type=file],
+  &[type=month],
+  &[type=password],
+  &[type=range],
+  &[type=time] {
+    appearance: none;
+    border: none;
+    display: block;
+    height: 2.4em;
+    padding: $sp-xs $sp-sm;
+    max-width: 100%;
+  }
 }
 
 textarea {
